# criaai-test

./: .env.example  .gitignore  Makefile  README.md  STATUS.md  UPLOAD_IMPLEMENTATION.md  demo.py  docker-compose.yml  env  env.example  init.sql  pyproject.toml  requirements.txt  setup_postgres.py  vercel.json
api/: index.py
app/: main.py
app/application/: dtos.py  services.py  use_cases.py  validators.py
app/core/: dependencies.py  exceptions.py  logging_config.py  settings.py  task_manager.py
app/domain/: interfaces.py
app/infrastructure/: database.py  gemini_client.py  http_downloader.py  mock_gemini_client.py  process_repository.py
app/routes/: extract.py  upload.py
frontend/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: Header.tsx  PDFProcessor.tsx  ProcessResult.tsx
frontend/src/config/: app.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: apiClient.ts
frontend/src/types/: api.ts
frontend/src/utils/: security.ts
tests/: conftest.py  test_dtos.py  test_routes.py  test_use_cases.py
